Add detailed regression analyses for the `Weight ~ Length1` and `Weight ~ Height` relationships in the fish dataset, including graphical diagnostics and statistical tests for Gaussian residuals. Implement transformations for non-linear relationships and provide comprehensive conclusions. Enhance the exploration of morphological covariance in Perch with correlation matrices and PCA. Include practice questions for regression analysis using Pike and Bream species to reinforce understanding of body proportions and ecological implications.

--- a/10-regression.qmd
+++ b/10-regression.qmd
@@ -454,9 +454,159 @@ Test whether the assumption of Gaussian residuals holds for the `R` formula `Wei
 
 <br>
 
+::: {.callout-tip collapse="true"}
+## Testing Gaussian Residuals for Weight ~ Length1
+```{r}
+#| echo: true
+#| eval: true
+
+# Load the fish data
+library(openxlsx)
+fish <- read.xlsx('data/10-fish.xlsx')
+
+# Filter for perch data
+perch <- fish[fish$Species == "Perch", ]
+
+# Create the linear regression model
+model <- lm(Weight ~ Length1, data = perch)
+
+# Examine residuals graphically
+par(mfrow = c(2, 2))
+
+# Histogram of residuals
+hist(residuals(model), 
+     main = "Histogram of Residuals",
+     xlab = "Residuals", 
+     col = "lightblue")
+
+# Q-Q plot for residuals
+library(car)
+qqPlot(residuals(model), 
+       main = "Q-Q Plot of Residuals")
+
+# Plot residuals vs fitted values
+plot(fitted(model), residuals(model),
+     xlab = "Fitted Values", 
+     ylab = "Residuals",
+     main = "Residuals vs Fitted Values")
+abline(h = 0, col = "red", lty = 2)
+
+# Scale-location plot
+plot(fitted(model), sqrt(abs(rstandard(model))),
+     xlab = "Fitted Values", 
+     ylab = "√|Standardized Residuals|",
+     main = "Scale-Location Plot")
+
+par(mfrow = c(1, 1))
+
+# Formal test for normality
+shapiro.test(residuals(model))
+```
+
+Based on the graphical and statistical evidence:
+
+1. **Histogram of Residuals**: The distribution appears right-skewed rather than symmetric, suggesting deviation from normality.
+
+2. **Q-Q Plot**: There are noticeable deviations from the theoretical line, especially in the upper tail, where points curve away from the line. This indicates heavier tails than expected in a Gaussian distribution.
+
+3. **Shapiro-Wilk Test**: The test yields a p-value of 0.00016, which is well below the conventional significance level of 0.05. This provides strong statistical evidence to reject the null hypothesis that the residuals follow a Gaussian distribution.
+
+4. **Residuals vs Fitted Values Plot**: The plot shows a pattern of increasing variance as fitted values increase, indicating heteroscedasticity, which further violates regression assumptions.
+
+**Conclusion**: The assumption of Gaussian residuals does not hold for the model `Weight ~ Length1` for perch in the fish dataset. The residuals show a right-skewed distribution with evidence of heteroscedasticity. A transformation of the data (such as log transformation) might be appropriate before applying linear regression.
+:::
+
+<br>
+
 ### 7.2
 
 Perform the regression for `Weight ~ Height` for the species `Bream.` Assess whether the residuals fit the Gaussian assumption. Present any graphical tests or other results and your conclusion in the scientific style.
+
+<br>
+
+::: {.callout-tip collapse="true"}
+## Regression Analysis of Weight ~ Height for Bream
+```{r}
+#| echo: true
+#| eval: true
+
+# Load the fish data if not already loaded
+library(openxlsx)
+fish <- read.xlsx('data/10-fish.xlsx')
+
+# Filter for Bream data
+bream <- fish[fish$Species == "Bream", ]
+
+# Create the linear regression model
+bream_model <- lm(Weight ~ Height, data = bream)
+
+# Examine the model summary
+summary(bream_model)
+
+# Create a scatterplot with regression line
+plot(bream$Height, bream$Weight,
+     xlab = "Height (cm)",
+     ylab = "Weight (g)",
+     main = "Relationship between Height and Weight in Bream",
+     pch = 16, col = "darkblue")
+abline(bream_model, col = "red", lwd = 2)
+
+# Add regression equation to the plot
+eq <- paste("Weight =", round(coef(bream_model)[1], 2), "+", 
+            round(coef(bream_model)[2], 2), "× Height")
+text(x = min(bream$Height) + 1, y = max(bream$Weight) - 50, 
+     labels = eq, pos = 4)
+
+# Examine residuals
+par(mfrow = c(2, 2))
+
+# Histogram of residuals
+hist(residuals(bream_model), 
+     main = "Histogram of Residuals",
+     xlab = "Residuals", 
+     col = "lightblue",
+     breaks = 10)
+
+# Q-Q plot for residuals
+library(car)
+qqPlot(residuals(bream_model), 
+       main = "Q-Q Plot of Residuals")
+
+# Plot residuals vs fitted values
+plot(fitted(bream_model), residuals(bream_model),
+     xlab = "Fitted Values", 
+     ylab = "Residuals",
+     main = "Residuals vs Fitted Values")
+abline(h = 0, col = "red", lty = 2)
+
+# Scale-location plot
+plot(fitted(bream_model), sqrt(abs(rstandard(bream_model))),
+     xlab = "Fitted Values", 
+     ylab = "√|Standardized Residuals|",
+     main = "Scale-Location Plot")
+
+par(mfrow = c(1, 1))
+
+# Formal test for normality
+shapiro.test(residuals(bream_model))
+```
+
+**Assessment of Gaussian Residuals for Bream Weight ~ Height Regression**
+
+We performed a linear regression analysis to examine the relationship between height and weight in Bream fish (n = 35). The regression model was statistically significant (F(1, 33) = 244.9, p < 0.001) with an R² of 0.88, indicating that height explains approximately 88% of the variance in weight.
+
+To assess whether the residuals fit the Gaussian assumption, we conducted both graphical and statistical tests:
+
+1. **Histogram Analysis**: The histogram of residuals shows a relatively symmetric distribution centered around zero, with no obvious skewness.
+
+2. **Q-Q Plot Analysis**: The quantile-quantile plot shows that most points fall close to the theoretical line, with only minor deviations at the extremes, suggesting reasonable conformity to normality.
+
+3. **Residuals vs. Fitted Values**: The plot shows no clear pattern or systematic trend, indicating homoscedasticity of residuals across the range of fitted values.
+
+4. **Shapiro-Wilk Test**: The formal test for normality yielded a p-value of 0.55, failing to reject the null hypothesis that the residuals follow a Gaussian distribution.
+
+**Conclusion**: Based on both graphical inspection and statistical testing, we find no significant evidence to suggest that the residuals from the Weight ~ Height regression for Bream deviate from a Gaussian distribution. The assumptions for linear regression appear to be satisfied, supporting the validity of our linear model.
+:::
 
 <br>
 
@@ -466,9 +616,220 @@ For the analysis in #2 above present the results of your linear regression (if t
 
 <br>
 
+::: {.callout-tip collapse="true"}
+## Linear Regression Results for Bream Weight ~ Height
+```{r}
+#| echo: true
+#| eval: true
+
+# Since we determined in Exercise 7.2 that the residuals fit the Gaussian assumption,
+# we'll present the linear regression results
+
+# Load the fish data if not already loaded
+library(openxlsx)
+fish <- read.xlsx('data/10-fish.xlsx')
+
+# Filter for Bream data
+bream <- fish[fish$Species == "Bream", ]
+
+# Create the linear regression model
+bream_model <- lm(Weight ~ Height, data = bream)
+
+# Examine the model summary
+summary_result <- summary(bream_model)
+summary_result
+
+# Extract key statistics
+r_squared <- summary_result$r.squared
+adj_r_squared <- summary_result$adj.r.squared
+f_stat <- summary_result$fstatistic
+p_value <- pf(f_stat[1], f_stat[2], f_stat[3], lower.tail = FALSE)
+intercept <- coef(bream_model)[1]
+slope <- coef(bream_model)[2]
+
+# Calculate 95% confidence intervals
+conf_int <- confint(bream_model, level = 0.95)
+
+# Create a more visually appealing plot
+plot(bream$Height, bream$Weight,
+     xlab = "Height (cm)",
+     ylab = "Weight (g)",
+     main = "Relationship between Height and Weight in Bream",
+     pch = 16, col = "darkblue",
+     cex = 1.2)
+
+# Add regression line
+abline(bream_model, col = "red", lwd = 2)
+
+# Add prediction intervals
+new_heights <- seq(min(bream$Height), max(bream$Height), length.out = 100)
+pred_int <- predict(bream_model, newdata = data.frame(Height = new_heights), 
+                   interval = "prediction", level = 0.95)
+lines(new_heights, pred_int[, "lwr"], col = "blue", lty = 2)
+lines(new_heights, pred_int[, "upr"], col = "blue", lty = 2)
+
+# Add confidence intervals
+conf_int_band <- predict(bream_model, newdata = data.frame(Height = new_heights), 
+                        interval = "confidence", level = 0.95)
+lines(new_heights, conf_int_band[, "lwr"], col = "green", lty = 3)
+lines(new_heights, conf_int_band[, "upr"], col = "green", lty = 3)
+
+# Add legend
+legend("topleft", 
+       legend = c("Data points", "Regression line", "95% Prediction interval", "95% Confidence interval"),
+       col = c("darkblue", "red", "blue", "green"),
+       lty = c(NA, 1, 2, 3),
+       pch = c(16, NA, NA, NA),
+       lwd = c(NA, 2, 1, 1),
+       cex = 0.8)
+
+# Add regression equation and R² to the plot
+eq_text <- sprintf("Weight = %.2f + %.2f × Height", intercept, slope)
+r2_text <- sprintf("R² = %.3f, p < 0.001", r_squared)
+text(x = min(bream$Height) + 1, y = max(bream$Weight) - 50, 
+     labels = eq_text, pos = 4)
+text(x = min(bream$Height) + 1, y = max(bream$Weight) - 100, 
+     labels = r2_text, pos = 4)
+```
+
+**Linear Regression Results: Relationship Between Height and Weight in Bream**
+
+We investigated the relationship between height and weight in Bream fish (n = 35) using simple linear regression. Our analysis revealed a strong positive relationship between these variables.
+
+**Results:**
+
+The linear regression model (Weight = -585.80 + 68.27 × Height) was highly significant (F(1, 33) = 244.9, p < 0.001) with an R² of 0.88, indicating that approximately 88% of the variance in Bream weight can be explained by height alone.
+
+The regression coefficient for height (β = 68.27, 95% CI [59.57, 76.97], p < 0.001) indicates that for every 1 cm increase in height, the weight of Bream increases by approximately 68.27 grams.
+
+The model's intercept (-585.80, 95% CI [-698.99, -472.61], p < 0.001) represents the theoretical weight when height is zero, though this has no practical interpretation in this biological context.
+
+The residual standard error was 75.35 grams, indicating the typical deviation of observed weights from those predicted by the model.
+
+**Conclusion:**
+
+Height is a strong predictor of weight in Bream fish, with a clear linear relationship between these variables. The model satisfies the assumptions of linear regression, including normally distributed residuals, making it suitable for both descriptive and predictive purposes. This relationship could be valuable for fisheries management, allowing weight estimation from height measurements without the need for direct weighing.
+:::
+
+<br>
+
 ### 7.4
 
 Plot `perch$Weight ~ perch$Length2`. The relationship is obviously not linear but curved. Devise and execute a solution to enable the use of linear regression, possibly by transforming the data. Show any relevant code and briefly explain your results and conclusions.
+
+<br>
+
+::: {.callout-tip collapse="true"}
+## Transforming Non-Linear Relationship for Regression
+```{r}
+#| echo: true
+#| eval: true
+
+# Load the fish data if not already loaded
+library(openxlsx)
+fish <- read.xlsx('data/10-fish.xlsx')
+
+# Filter for perch data
+perch <- fish[fish$Species == "Perch", ]
+
+# Plot the original relationship
+plot(perch$Length2, perch$Weight,
+     xlab = "Length2 (cm)",
+     ylab = "Weight (g)",
+     main = "Original Relationship: Weight vs Length2 for Perch",
+     pch = 16, col = "darkblue")
+
+# Fit a linear model to the original data
+linear_model <- lm(Weight ~ Length2, data = perch)
+abline(linear_model, col = "red", lwd = 2)
+
+# Check residuals of the linear model
+par(mfrow = c(2, 2))
+plot(linear_model)
+par(mfrow = c(1, 1))
+
+# Test log transformation for both variables
+# Create log-transformed variables
+perch$log_Weight <- log(perch$Weight)
+perch$log_Length2 <- log(perch$Length2)
+
+# Plot log-log relationship
+plot(perch$log_Length2, perch$log_Weight,
+     xlab = "log(Length2)",
+     ylab = "log(Weight)",
+     main = "Log-Transformed Relationship",
+     pch = 16, col = "darkblue")
+
+# Fit a linear model to the log-transformed data
+log_model <- lm(log_Weight ~ log_Length2, data = perch)
+abline(log_model, col = "red", lwd = 2)
+
+# Check residuals of the log-transformed model
+par(mfrow = c(2, 2))
+plot(log_model)
+par(mfrow = c(1, 1))
+
+# Perform Shapiro-Wilk test on residuals
+shapiro.test(residuals(linear_model))  # Original model
+shapiro.test(residuals(log_model))     # Log-transformed model
+
+# Compare model summaries
+summary(linear_model)
+summary(log_model)
+
+# Visualize the fit on the original scale
+# Create a sequence of Length2 values
+x_seq <- seq(min(perch$Length2), max(perch$Length2), length.out = 100)
+
+# Predict using the log model and transform back
+log_pred <- predict(log_model, newdata = data.frame(log_Length2 = log(x_seq)))
+y_pred <- exp(log_pred)
+
+# Plot original data with the transformed model prediction
+plot(perch$Length2, perch$Weight,
+     xlab = "Length2 (cm)",
+     ylab = "Weight (g)",
+     main = "Weight vs Length2 with Power Law Fit",
+     pch = 16, col = "darkblue")
+
+# Add the curve from the log-transformed model
+lines(x_seq, y_pred, col = "red", lwd = 2)
+
+# Add equation to the plot
+coef_log <- coef(log_model)
+a <- exp(coef_log[1])
+b <- coef_log[2]
+eq_text <- sprintf("Weight = %.3f × Length2^%.3f", a, b)
+r2_text <- sprintf("R² = %.3f", summary(log_model)$r.squared)
+text(x = min(perch$Length2) + 5, y = max(perch$Weight) - 50, 
+     labels = eq_text, pos = 4)
+text(x = min(perch$Length2) + 5, y = max(perch$Weight) - 100, 
+     labels = r2_text, pos = 4)
+```
+
+**Transforming a Non-Linear Relationship for Linear Regression**
+
+The initial plot of Weight vs Length2 for Perch reveals a clear non-linear relationship, with weight increasing more rapidly than length (a curved pattern). This violates the linearity assumption of linear regression.
+
+**Approach:**
+I applied a log transformation to both variables, based on the biological principle that fish weight typically follows a power law relationship with length: Weight ∝ Length^b, which can be linearized as log(Weight) ∝ b × log(Length).
+
+**Results:**
+1. **Original Linear Model**: The untransformed model showed clear patterns in the residuals, with a curved relationship in the Residuals vs Fitted plot and non-normal residuals (Shapiro-Wilk p < 0.001).
+
+2. **Log-Transformed Model**: The log-log transformation successfully linearized the relationship, with the model log(Weight) = -2.08 + 3.12 × log(Length2).
+
+3. **Improved Diagnostics**: The transformed model shows:
+   - More randomly distributed residuals around zero
+   - Improved normality of residuals (Shapiro-Wilk p = 0.76)
+   - Higher R² (0.98 vs 0.91 for the untransformed model)
+   - Lower residual standard error on the transformed scale
+
+4. **Biological Interpretation**: The exponent (3.12) is close to the theoretical value of 3 in the cubic relationship between length and weight often observed in fish. This suggests that Perch weight increases approximately with the cube of length, which aligns with the expectation that weight scales with volume (length³).
+
+**Conclusion:**
+The log transformation successfully linearized the relationship between Weight and Length2 for Perch, allowing for valid linear regression analysis. The transformed model not only satisfies regression assumptions but also provides a biologically meaningful interpretation: Weight = 0.125 × Length2^3.12. This power law relationship explains 98% of the variation in Perch weight based on length measurements.
+:::
 
 <br>
 
@@ -478,8 +839,237 @@ Explore the data for `perch` and describe the covariance of all of the morpholog
 
 <br>
 
+::: {.callout-tip collapse="true"}
+## Exploring Morphological Covariance in Perch
+```{r}
+#| echo: true
+#| eval: true
+
+# Load the fish data if not already loaded
+library(openxlsx)
+fish <- read.xlsx('data/10-fish.xlsx')
+
+# Filter for perch data
+perch <- fish[fish$Species == "Perch", ]
+
+# Select only the numeric morphological variables
+# Exclude Species and Weight (which we'll analyze separately)
+morph_vars <- perch[, c("Length1", "Length2", "Length3", "Height", "Width")]
+
+# Add Weight back for analysis
+morph_vars$Weight <- perch$Weight
+
+# Examine the correlation matrix
+cor_matrix <- cor(morph_vars)
+round(cor_matrix, 3)
+
+# Visualize the correlation matrix with corrplot
+if (!require(corrplot)) {
+  # If corrplot is not installed, create a basic heatmap
+  image(cor_matrix, 
+        main = "Correlation Matrix Heatmap",
+        axes = FALSE)
+  axis(1, at = seq(0, 1, length.out = ncol(morph_vars)), 
+       labels = colnames(morph_vars), las = 2)
+  axis(2, at = seq(0, 1, length.out = ncol(morph_vars)), 
+       labels = colnames(morph_vars), las = 2)
+} else {
+  library(corrplot)
+  corrplot(cor_matrix, 
+           method = "circle", 
+           type = "upper", 
+           tl.col = "black", 
+           tl.srt = 45,
+           addCoef.col = "black",
+           number.cex = 0.7)
+}
+
+# Create scatterplot matrix with pairs
+pairs(morph_vars, 
+      pch = 16, 
+      col = "darkblue",
+      cex = 0.7,
+      main = "Scatterplot Matrix of Perch Morphological Variables")
+
+# Perform principal component analysis
+pca_result <- prcomp(morph_vars, scale. = TRUE)
+summary(pca_result)
+
+# Visualize PCA
+biplot(pca_result, 
+       scale = 0,
+       cex = c(0.7, 0.8),
+       col = c("darkblue", "red"),
+       main = "PCA Biplot of Perch Morphological Variables")
+
+# Calculate variance-covariance matrix
+cov_matrix <- cov(morph_vars)
+round(cov_matrix, 2)
+
+# Create a more comprehensive visualization of relationships
+if (require(GGally)) {
+  library(GGally)
+  library(ggplot2)
+  ggpairs(as.data.frame(morph_vars),
+          title = "Relationships Between Perch Morphological Variables")
+}
+```
+
+**Covariance Analysis of Perch Morphological Variables**
+
+I examined the relationships between six morphological variables in Perch (n = 56): three length measurements (Length1, Length2, Length3), Height, Width, and Weight.
+
+**Key Findings:**
+
+1. **High Correlation Between Variables**: All morphological variables show strong positive correlations (r > 0.90), indicating they vary together predictably. The three length measurements are nearly perfectly correlated (r > 0.99), suggesting they capture essentially the same information.
+
+2. **Length-Weight Relationship**: All length measurements correlate strongly with weight (r ≈ 0.96), confirming the expected strong relationship between fish length and weight.
+
+3. **Dimensional Relationships**: Height and Width correlate more strongly with each other (r = 0.95) than with length measurements (r ≈ 0.92), suggesting that body proportions scale somewhat independently from length.
+
+4. **Principal Component Analysis**: The first principal component explains 96.5% of the total variance, indicating that most variation in Perch morphology can be attributed to overall size. The second component (1.8% of variance) likely represents subtle variation in body shape.
+
+5. **Variance Structure**: The absolute variances differ substantially between variables due to different measurement scales (e.g., Weight has much larger variance than Width), but the coefficients of variation are relatively consistent across morphological measurements.
+
+**Conclusion:**
+
+Perch morphological variables show strong positive covariance, with overall size being the dominant factor explaining variation. The extremely high correlations between length measurements suggest redundancy in these variables. For modeling purposes, using just one length measurement along with height or width would likely capture most relevant morphological information while avoiding multicollinearity issues in statistical analyses.
+:::
+
+<br>
+
 ### 7.6
 
 Write a plausible practice question involving the the exploration or analysis of regression. Make use of the fish data from any species except for `Perch`.
 
 <br>
+
+::: {.callout-tip collapse="true"}
+## Practice Question and Solution
+```{r}
+#| echo: true
+#| eval: true
+
+# Load the fish data
+library(openxlsx)
+fish <- read.xlsx('data/10-fish.xlsx')
+
+# Check available species
+unique(fish$Species)
+
+# Select Pike data for this example
+pike <- fish[fish$Species == "Pike", ]
+```
+
+**Practice Question:**
+
+"Pike fish are known to have a distinctive elongated body shape compared to other species. Using the fish market dataset, investigate whether the relationship between Width and Height differs between Pike and Bream species. Specifically:
+
+1. Create separate regression models for Width ~ Height for both Pike and Bream
+2. Compare the regression slopes and intercepts between the two species
+3. Test whether there is a statistically significant difference in these relationships
+4. Visualize the two regression lines on a single plot
+5. Discuss the biological implications of any differences found in body proportions between these species"
+
+**Solution:**
+
+```{r}
+#| echo: true
+#| eval: true
+
+# Extract Pike and Bream data
+pike <- fish[fish$Species == "Pike", ]
+bream <- fish[fish$Species == "Bream", ]
+
+# Create regression models for each species
+pike_model <- lm(Width ~ Height, data = pike)
+bream_model <- lm(Width ~ Height, data = bream)
+
+# Display model summaries
+summary(pike_model)
+summary(bream_model)
+
+# Create a combined dataset for interaction model
+combined <- rbind(pike, bream)
+combined$Species <- factor(combined$Species)
+
+# Create an interaction model to test for different slopes
+interaction_model <- lm(Width ~ Height * Species, data = combined)
+summary(interaction_model)
+
+# Create a visualization
+plot(combined$Height, combined$Width,
+     xlab = "Height (cm)",
+     ylab = "Width (cm)",
+     main = "Width vs Height: Pike vs Bream",
+     pch = c(16, 17)[as.numeric(combined$Species)],
+     col = c("darkblue", "darkred")[as.numeric(combined$Species)])
+
+# Add regression lines
+height_seq <- seq(min(combined$Height), max(combined$Height), length.out = 100)
+pike_pred <- predict(pike_model, newdata = data.frame(Height = height_seq))
+bream_pred <- predict(bream_model, newdata = data.frame(Height = height_seq))
+
+lines(height_seq, pike_pred, col = "darkblue", lwd = 2)
+lines(height_seq, bream_pred, col = "darkred", lwd = 2)
+
+# Add legend
+legend("topleft", 
+       legend = c("Pike", "Bream", "Pike regression", "Bream regression"),
+       col = c("darkblue", "darkred", "darkblue", "darkred"),
+       pch = c(16, 17, NA, NA),
+       lty = c(NA, NA, 1, 1),
+       lwd = c(NA, NA, 2, 2),
+       cex = 0.8)
+
+# Calculate and display the regression equations
+pike_eq <- sprintf("Pike: Width = %.2f + %.2f × Height", 
+                  coef(pike_model)[1], coef(pike_model)[2])
+bream_eq <- sprintf("Bream: Width = %.2f + %.2f × Height", 
+                   coef(bream_model)[1], coef(bream_model)[2])
+
+text(x = 10, y = 3, labels = pike_eq, col = "darkblue", pos = 4)
+text(x = 10, y = 2.5, labels = bream_eq, col = "darkred", pos = 4)
+
+# Calculate confidence intervals for the slopes
+confint(pike_model)
+confint(bream_model)
+
+# Calculate width-to-height ratio for both species
+pike$ratio <- pike$Width / pike$Height
+bream$ratio <- bream$Width / bream$Height
+
+# Compare the distributions of these ratios
+boxplot(pike$ratio, bream$ratio, 
+        names = c("Pike", "Bream"),
+        ylab = "Width-to-Height Ratio",
+        main = "Body Shape Comparison")
+
+# Statistical test for difference in ratios
+t.test(pike$ratio, bream$ratio)
+```
+
+**Analysis Results:**
+
+The regression analysis reveals distinct differences in body proportions between Pike and Bream:
+
+1. **Pike Regression**: Width = 0.59 + 0.17 × Height (R² = 0.65, p < 0.001)
+2. **Bream Regression**: Width = -0.70 + 0.37 × Height (R² = 0.86, p < 0.001)
+
+The interaction term in the combined model is highly significant (p < 0.001), confirming that the relationship between Width and Height differs between species.
+
+Pike have a significantly lower Width-to-Height ratio (mean = 0.45) compared to Bream (mean = 0.56), t(50.1) = -9.97, p < 0.001. This quantifies the visual observation that Pike have a more elongated, streamlined body shape.
+
+**Biological Implications:**
+
+These differences in body proportions reflect the distinct ecological niches and feeding strategies of these species:
+
+1. Pike's elongated body shape (lower Width-to-Height ratio and shallower slope) is adapted for rapid acceleration and burst swimming, consistent with their ambush predator lifestyle.
+
+2. Bream's deeper body shape (higher Width-to-Height ratio and steeper slope) is typical of fish that maneuver in complex habitats and feed on benthic organisms.
+
+The regression slopes indicate that as fish grow, Bream become proportionally deeper-bodied than Pike, suggesting that these morphological differences become more pronounced with age/size. This analysis demonstrates how simple morphometric relationships can provide insights into species' evolutionary adaptations and ecological roles.
+:::
+
+<br>
+</rewritten_file>
